--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <a href="https://www.freecodecamp.org/certification/NicolasGonz/responsive-web-design" Target="_blank">
                         <img src="./img/RWD-CERT.png" class="change__img--cert" alt="">
                     </a>
-                    <button class="open__arrow">Open <img src="./img/Open-arrow.png" class="change_arrow" alt="open_arrow_icon"></button>
+                    <button class="open__arrow">Open <img src="./img/Open-arrow.png" class="change__arrow" alt="open_arrow_icon"></button>
                 </div>
                 <div class="grid__item">
                     <a href="https://www.freecodecamp.org/certification/NicolasGonz/legacy-front-end" Target="_blank">
@@ -214,7 +214,7 @@
                 </div>
                 <div class="grid__item">
                     <a href="https://www.freecodecamp.org/certification/NicolasGonz/javascript-algorithms-and-data-structures" Target="_blank">
-                        <img src="./img/JSADS-CERT.png" class="change__img--cert" class="change_arrow" alt="">
+                        <img src="./img/JSADS-CERT.png" class="change__img--cert" class="change__arrow" alt="">
                     </a>
                     <button class="open__arrow">Open <img src="./img/Open-arrow.png" class="change__arrow" alt="open_arrow_icon"></button>
                 </div>
